# PhilippinesAuditSystem

./: .gitignore  README.md  arm64phil.sh  pipe_data.py  requirements.txt  test.ipynb  x64phil.sh
control/: clean.py  config.py  extract.py  extract_all.py  extracttools.py  logging_config.py  mksheet.py  run.sh  test_system.py
convert/: .dockerignore  clean.py  convert.Dockerfile  convert.sh  run.sh
detect/: detector.py  model.py  phildata.py  train.py
notebooks/: EDA.ipynb  Functional_testing.ipynb  Individual_file_testing.ipynb  LP_investigation.ipynb  Nanonets_testing.ipynb  PhilDetection.ipynb  TrainingsetCreation.ipynb  testingtesting.ipynb
old/: batch_execute.sh
philaudit/: pyproject.toml  requirements.txt
philaudit/detect/: datamodule.py  detector.py  model.py  train.py
philaudit/rulebased/: indicators.py  rule_based.py
philaudit/src/: philaudit.py  requirements.txt
philaudit/src/philaudit/: callbacks.py  datamodule.py  detector.py  document_table.py  extractor.py  table_extractor.py  text_normalizer.py  train.py  transforms.py
scripts/: convert.py  extract.py  generate_images.py  generate_metadata.py  map_images_to_pdfs.py  setup.py  sort.py
test/: test_cases.py  test_pipeline.py
