[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "philaudit"
version = "0.0.1"
authors = [
    {name = "Jack Vaughan", email = "jackvaughan09@gmail.com"},
]
description = "A model driven approach to extracting tabular data from PDFs."
readme = "README.md"
requires-python = "=3.8"
license = {file = "LICENSE.txt"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "aiohttp==3.8.4",
    "aiosignal==1.3.1",
    "albumentations==1.3.1",
    "alembic==1.11.1",
    "async-timeout==4.0.2",
    "attrs==23.1.0",
    "camelot-py==0.9.0",
    "certifi==2023.5.7",
    "charset-normalizer==3.1.0",
    "cmaes==0.9.1",
    "colorlog==6.7.0",
    "cryptography==39.0.1",
    "filelock==3.12.2",
    "frozenlist==1.3.3",
    "fsspec==2023.6.0",
    "idna==3.4",
    "imageio==2.31.1",
    "importlib-metadata==6.7.0",
    "importlib-resources==5.12.0",
    "Jinja2==3.1.2",
    "joblib==1.2.0",
    "lazy_loader==0.2",
    "lightning-utilities==0.8.0",
    "Mako==1.2.4",
    "MarkupSafe==2.1.3",
    "mpmath==1.3.0",
    "multidict==6.0.4",
    "networkx==3.1",
    "numpy==1.24.4",
    "opencv-python-headless==4.7.0.72",
    "optuna==3.2.0",
    "packaging==23.1",
    "Pillow==9.5.0",
    "pycryptodome==3.18.0",
    "pytorch-lightning==2.0.4",
    "PyWavelets==1.4.1",
    "PyYAML==6.0",
    "qudida==0.0.4",
    "requests==2.31.0",
    "scikit-image==0.21.0",
    "scikit-learn==1.2.2",
    "scipy==1.10.1",
    "SQLAlchemy==2.0.17",
    "sympy==1.12",
    "threadpoolctl==3.1.0",
    "tifffile==2023.4.12",
    "torch==2.0.1",
    "torchmetrics==0.11.4",
    "torchvision==0.15.2",
    "tqdm==4.65.0",
    "typing_extensions==4.6.3",
    "urllib3==2.0.3",
    "yarl==1.9.2",
    "zipp==3.15.0",
]

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
